--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -2,210 +2,234 @@
 <div class="flex flex-col items-center w-full space-y-3">
   <div
     class="p-2 border-2 flex items-center w-128 max-w-full bg-menu-100 rounded-xl border-menu-400"
-  >
+    >
     <div class="font-semibold">Replay</div>
     <input
       [(ngModel)]="replayURI"
       type="text"
       class="p-1 bg-menu-100 border-2 flex-grow border-menu-300 rounded-lg mx-2"
-    />
-    <button
-      *ngIf="!analyzed"
-      (click)="analyze()"
-      class="px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
-    >
-      Analyze
-    </button>
-    <button
-      *ngIf="analyzed"
-      class="opacity-50 px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
-    >
-      Analyze
-    </button>
-  </div>
-  <div
-    class="max-w-full p-2 font-bold text-center rounded-full bg-caution w-fit"
-  >
-    The replay analyzer is currently still in testing. If you find errors,
-    please share the replay on our
-    <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>.
-  </div>
-</div>
-<!-- <loading *ngIf="analyzed && !replayData"></pdz-loading> -->
-<div *ngIf="replayData" class="flex justify-center w-full p-2">
-  <div
-    class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
-  >
-    <div class="flex space-x-4 p-1 text-lg">
-      <div>
-        <label class="font-semibold text-symbolColor-sub" for="format">
-          Format:
-        </label>
-        <span id="format">{{ replayData.gametype }}</span>
-      </div>
-      <div>
-        <label class="font-semibold text-symbolColor-sub" for="gen">
-          Generation:
-        </label>
-        <span id="gen"> {{ replayData.genNum }} </span>
-      </div>
-      <div>
-        <label class="font-semibold text-symbolColor-sub" for="turns">
-          Turns:
-        </label>
-        <span id="turns"> {{ replayData.turns }} </span>
-      </div>
-      <div>
-        <label class="font-semibold text-symbolColor-sub" for="gameTime">
-          Game Time:
-        </label>
-        <span id="gameTime"
-          >{{ toMinutes(replayData.gameTime) }} minutes
-          {{ remainingSeconds(replayData.gameTime) }} seconds</span
-        >
-      </div>
-    </div>
-    <div class="space-y-4 w-fit max-w-full">
-      <div
-        *ngFor="let player of replayData.stats; let playerNum = index"
-        [ngClass]="playerClass(playerNum + 1)"
-        class="p-1 border rounded border-menu-400"
-      >
-        <div class="flex space-x-2 items-end flex-wrap pb-2">
-          <div class="text-xl font-bold">{{ player.username }}</div>
-        </div>
-        <div class="flex space-x-2">
-          <div class="">
-            <div>
-              <span class="font-semibold">Kills:</span> {{ player.total.kills }}
-            </div>
-            <div>
-              <span class="font-semibold">Deaths:</span>
-              {{ player.total.deaths }}
-            </div>
-            <div>
-              <span class="font-semibold">Damage Dealt:</span>
-              {{ player.total.damageDealt | number: "1.0-0" }}%
-            </div>
-            <div>
-              <span class="font-semibold">Damage Taken:</span>
-              {{ player.total.damageTaken | number: "1.0-0" }}%
-            </div>
-            <div>
-              <span class="font-semibold"> Total Accuracy: </span>
-              {{ player.luck.moves.actual | percent }} ({{
-                player.luck.moves.hits
-              }}/{{ player.luck.moves.total }})
-            </div>
-            <div>
-              <span class="font-semibold"> Expected Accuracy: </span>
-              {{ player.luck.moves.expected | percent }}
-            </div>
-            <div>
-              <span class="font-semibold"> Total Crits: </span>
-              {{ player.luck.crits.actual | percent }} ({{
-                player.luck.crits.hits
-              }}/{{ player.luck.crits.total }})
-            </div>
-            <div>
-              <span class="font-semibold"> Expected Crits: </span>
-              {{ player.luck.crits.expected | percent }}
-            </div>
-            <div *ngIf="player.luck.status.total > 0">
-              <div>
-                <span class="font-semibold"> Total Fully Parad: </span>
-                {{ player.luck.status.actual | percent }} ({{
-                  player.luck.status.full
-                }}/{{ player.luck.status.total }})
-              </div>
-              <div>
-                <span class="font-semibold"> Expected Fully Parad: </span>
-                {{ player.luck.status.expected | percent }}
-              </div>
-            </div>
-            <div *ngIf="player.win" class="font-bold">Winner</div>
-          </div>
-          <div class="w-full flex justify-center">
-            <div class="flex flex-wrap">
-              <div *ngFor="let mon of player.team" class="p-1">
-                <div class="w-20">
-                  <pdz-sprite
-                    [pid]="mon.formes[0].id"
-                    [disabled]="mon.fainted"
-                  ></pdz-sprite>
-                </div>
-                <div *ngIf="!mon.kills[1]">
-                  <span class="font-semibold"> Kills: </span> {{ mon.kills[0] }}
-                </div>
-                <div *ngIf="mon.kills[1]">
-                  <span class="font-semibold"> Kills: </span>
-                  <div>
-                    <span> Direct: </span>
-                    {{ mon.kills[0] }}
-                  </div>
-                  <div>
-                    <span> Indirect: </span>
-                    {{ mon.kills[1] }}
-                  </div>
-                </div>
-                <div *ngIf="!mon.damageDealt[1]">
-                  <span class="font-semibold"> Damage Dealt: </span>
-                  {{ mon.damageDealt[0] | number: "1.0-0" }}%
-                </div>
-                <div *ngIf="mon.damageDealt[1]">
-                  <span class="font-semibold"> Damage Dealt: </span>
-                  <div>
-                    <span> Direct: </span>
-                    {{ mon.damageDealt[0] | number: "1.0-0" }}%
-                  </div>
-                  <div>
-                    <span> Indirect: </span>
-                    {{ mon.damageDealt[1] | number: "1.0-0" }}%
-                  </div>
-                </div>
-                <div *ngIf="!mon.damageTaken[1]">
-                  <span class="font-semibold"> Damage Taken: </span>
-                  {{ mon.damageTaken[0] | number: "1.0-0" }}%
-                </div>
-                <div *ngIf="mon.damageTaken[1]">
-                  <span class="font-semibold"> Damage Taken: </span>
-                  <div>
-                    <span> Direct: </span>
-                    {{ mon.damageTaken[0] | number: "1.0-0" }}%
-                  </div>
-                  <div>
-                    <span> Indirect: </span>
-                    {{ mon.damageTaken[1] | number: "1.0-0" }}%
-                  </div>
-                </div>
-                <div>
-                  <span class="font-semibold"> HP Restored: </span>
-                  {{ mon.hpRestored | number: "1.0-0" }}%
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w-full">
-        <h2 class="text-xl font-bold fill-">Events</h2>
-        <div class="border-2 border-menu-400 rounded w-full">
-          <div
-            *ngFor="let event of replayData.events"
-            class="py-1 px-2 border-b border-menu-400 w-full"
-            [ngClass]="playerClass(event.player)"
+      />
+      @if (!analyzed) {
+        <button
+          (click)="analyze()"
+          class="px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
           >
-            <span class="font-semibold"> Turn {{ event.turn }}:</span>
-            {{ event.message }}
+          Analyze
+        </button>
+      }
+      @if (analyzed) {
+        <button
+          class="opacity-50 px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
+          >
+          Analyze
+        </button>
+      }
+    </div>
+    <div
+      class="max-w-full p-2 font-bold text-center rounded-full bg-caution w-fit"
+      >
+      The replay analyzer is currently still in testing. If you find errors,
+      please share the replay on our
+      <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>.
+    </div>
+  </div>
+  <!-- <loading *ngIf="analyzed && !replayData"></pdz-loading> -->
+  @if (replayData) {
+    <div class="flex justify-center w-full p-2">
+      <div
+        class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
+        >
+        <div class="flex space-x-4 p-1 text-lg">
+          <div>
+            <label class="font-semibold text-symbolColor-sub" for="format">
+              Format:
+            </label>
+            <span id="format">{{ replayData.gametype }}</span>
+          </div>
+          <div>
+            <label class="font-semibold text-symbolColor-sub" for="gen">
+              Generation:
+            </label>
+            <span id="gen"> {{ replayData.genNum }} </span>
+          </div>
+          <div>
+            <label class="font-semibold text-symbolColor-sub" for="turns">
+              Turns:
+            </label>
+            <span id="turns"> {{ replayData.turns }} </span>
+          </div>
+          <div>
+            <label class="font-semibold text-symbolColor-sub" for="gameTime">
+              Game Time:
+            </label>
+            <span id="gameTime"
+              >{{ toMinutes(replayData.gameTime) }} minutes
+              {{ remainingSeconds(replayData.gameTime) }} seconds</span
+              >
+            </div>
+          </div>
+          <div class="space-y-4 w-fit max-w-full">
+            @for (player of replayData.stats; track player; let playerNum = $index) {
+              <div
+                [ngClass]="playerClass(playerNum + 1)"
+                class="p-1 border rounded border-menu-400"
+                >
+                <div class="flex space-x-2 items-end flex-wrap pb-2">
+                  <div class="text-xl font-bold">{{ player.username }}</div>
+                </div>
+                <div class="flex space-x-2">
+                  <div class="">
+                    <div>
+                      <span class="font-semibold">Kills:</span> {{ player.total.kills }}
+                    </div>
+                    <div>
+                      <span class="font-semibold">Deaths:</span>
+                      {{ player.total.deaths }}
+                    </div>
+                    <div>
+                      <span class="font-semibold">Damage Dealt:</span>
+                      {{ player.total.damageDealt | number: "1.0-0" }}%
+                    </div>
+                    <div>
+                      <span class="font-semibold">Damage Taken:</span>
+                      {{ player.total.damageTaken | number: "1.0-0" }}%
+                    </div>
+                    <div>
+                      <span class="font-semibold"> Total Accuracy: </span>
+                      {{ player.luck.moves.actual | percent }} ({{
+                      player.luck.moves.hits
+                      }}/{{ player.luck.moves.total }})
+                    </div>
+                    <div>
+                      <span class="font-semibold"> Expected Accuracy: </span>
+                      {{ player.luck.moves.expected | percent }}
+                    </div>
+                    <div>
+                      <span class="font-semibold"> Total Crits: </span>
+                      {{ player.luck.crits.actual | percent }} ({{
+                      player.luck.crits.hits
+                      }}/{{ player.luck.crits.total }})
+                    </div>
+                    <div>
+                      <span class="font-semibold"> Expected Crits: </span>
+                      {{ player.luck.crits.expected | percent }}
+                    </div>
+                    @if (player.luck.status.total > 0) {
+                      <div>
+                        <div>
+                          <span class="font-semibold"> Total Fully Parad: </span>
+                          {{ player.luck.status.actual | percent }} ({{
+                          player.luck.status.full
+                          }}/{{ player.luck.status.total }})
+                        </div>
+                        <div>
+                          <span class="font-semibold"> Expected Fully Parad: </span>
+                          {{ player.luck.status.expected | percent }}
+                        </div>
+                      </div>
+                    }
+                    @if (player.win) {
+                      <div class="font-bold">Winner</div>
+                    }
+                  </div>
+                  <div class="w-full flex justify-center">
+                    <div class="flex flex-wrap">
+                      @for (mon of player.team; track mon) {
+                        <div class="p-1">
+                          <div class="w-20">
+                            <pdz-sprite
+                              [pid]="mon.formes[0].id"
+                              [disabled]="mon.fainted"
+                            ></pdz-sprite>
+                          </div>
+                          @if (!mon.kills[1]) {
+                            <div>
+                              <span class="font-semibold"> Kills: </span> {{ mon.kills[0] }}
+                            </div>
+                          }
+                          @if (mon.kills[1]) {
+                            <div>
+                              <span class="font-semibold"> Kills: </span>
+                              <div>
+                                <span> Direct: </span>
+                                {{ mon.kills[0] }}
+                              </div>
+                              <div>
+                                <span> Indirect: </span>
+                                {{ mon.kills[1] }}
+                              </div>
+                            </div>
+                          }
+                          @if (!mon.damageDealt[1]) {
+                            <div>
+                              <span class="font-semibold"> Damage Dealt: </span>
+                              {{ mon.damageDealt[0] | number: "1.0-0" }}%
+                            </div>
+                          }
+                          @if (mon.damageDealt[1]) {
+                            <div>
+                              <span class="font-semibold"> Damage Dealt: </span>
+                              <div>
+                                <span> Direct: </span>
+                                {{ mon.damageDealt[0] | number: "1.0-0" }}%
+                              </div>
+                              <div>
+                                <span> Indirect: </span>
+                                {{ mon.damageDealt[1] | number: "1.0-0" }}%
+                              </div>
+                            </div>
+                          }
+                          @if (!mon.damageTaken[1]) {
+                            <div>
+                              <span class="font-semibold"> Damage Taken: </span>
+                              {{ mon.damageTaken[0] | number: "1.0-0" }}%
+                            </div>
+                          }
+                          @if (mon.damageTaken[1]) {
+                            <div>
+                              <span class="font-semibold"> Damage Taken: </span>
+                              <div>
+                                <span> Direct: </span>
+                                {{ mon.damageTaken[0] | number: "1.0-0" }}%
+                              </div>
+                              <div>
+                                <span> Indirect: </span>
+                                {{ mon.damageTaken[1] | number: "1.0-0" }}%
+                              </div>
+                            </div>
+                          }
+                          <div>
+                            <span class="font-semibold"> HP Restored: </span>
+                            {{ mon.hpRestored | number: "1.0-0" }}%
+                          </div>
+                        </div>
+                      }
+                    </div>
+                  </div>
+                </div>
+              </div>
+            }
+            <div class="w-full">
+              <h2 class="text-xl font-bold fill-">Events</h2>
+              <div class="border-2 border-menu-400 rounded w-full">
+                @for (event of replayData.events; track event) {
+                  <div
+                    class="py-1 px-2 border-b border-menu-400 w-full"
+                    [ngClass]="playerClass(event.player)"
+                    >
+                    <span class="font-semibold"> Turn {{ event.turn }}:</span>
+                    {{ event.message }}
+                  </div>
+                }
+              </div>
+            </div>
+            <div class="w-full flex justify-center">
+              <replay-chart
+                class="w-full bg-slate-200 rounded-lg border-2 border-slate-400 max-w-160"
+                [data]="replayData.stats"
+              ></replay-chart>
+            </div>
           </div>
         </div>
       </div>
-      <div class="w-full flex justify-center">
-        <replay-chart
-          class="w-full bg-slate-200 rounded-lg border-2 border-slate-400 max-w-160"
-          [data]="replayData.stats"
-        ></replay-chart>
-      </div>
-    </div>
-  </div>
-</div>
+    }
