--- a/src/app/drafts/matchup-overview/widgets/notes/notes.component.scss
+++ b/src/app/drafts/matchup-overview/widgets/notes/notes.component.scss
@@ -29,7 +29,7 @@
     width: 100%;
     height: 100%;
     resize: none;
-
+    background-color: pdz-color(surface);
     font-family: inherit;
     transition:
       border-color 0.2s,
