update external link page text

--- a/src/app/pages/external-link/external-link.component.html
+++ b/src/app/pages/external-link/external-link.component.html
@@ -4,12 +4,14 @@
       <div class="external-link__icon">
         <mat-icon>warning</mat-icon>
       </div>
-      <h1 class="external-link__title">You're leaving Pokemon DraftZone</h1>
+      <h1 class="external-link__title">
+        Hey! Wait! Don't go out! It's unsafe!
+      </h1>
     </div>
 
     <div class="external-link__body">
       <p class="external-link__message">
-        You're about to visit an external website. Please verify that you trust
+        You're about to leave Pokemon DraftZone. Please verify that you trust
         this destination before continuing.
       </p>
 
@@ -35,12 +37,13 @@
       }
 
       <div class="external-link__tips">
-        <p><strong>Tips to stay safe:</strong></p>
+        <p><strong>Trainer Tips:</strong></p>
         <ul>
           <li>Verify the domain name matches the expected website</li>
           <li>Look for HTTPS in the URL for secure connections</li>
           <li>Never enter sensitive information on unfamiliar sites</li>
           <li>When in doubt, search for the website directly</li>
+          <li>Repels have no use once in battle!</li>
         </ul>
       </div>
     </div>
