update notes and summary details

--- a/src/app/util/matchup/summary-core/summary-core.component.scss
+++ b/src/app/util/matchup/summary-core/summary-core.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+
 td {
   text-align: center;
 }
@@ -85,4 +91,13 @@ table {
 
 .pokemon-label {
   font-weight: 600;
+}
+
+.cdk-footer-cell {
+  div {
+    min-height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
